// AVISO Database Schema
// Import: drawdb.app/editor → File → Import from → DBML

Enum user_role {
  admin
  rider
}

Enum trip_status {
  active
  ended
}

Enum hazard_type {
  Pothole
  Road_Excavation
  Road_Barrier
  Traffic_Sign
  Traffic_Light_Red
  Traffic_Light_Orange
  Traffic_Light_Green
}

Enum hazard_status {
  active
  resolved
}

Enum alert_status {
  pending
  acknowledged
  resolved
}

Table users {
  id           bigint       [pk, increment]
  first_name   varchar(255) [not null]
  middle_name  varchar(255)
  last_name    varchar(255) [not null]
  username     varchar(255) [unique, not null]
  email        varchar(255) [unique, not null]
  contact_number varchar(255)
  address      varchar(255)
  avatar_path  varchar(255)
  email_verified_at timestamp
  password     varchar(255) [not null]
  role         user_role    [not null, default: "rider"]
  remember_token varchar(100)
  created_at   timestamp
  updated_at   timestamp
}

Table trips {
  id                bigint        [pk, increment]
  user_id           bigint        [ref: > users.id]
  rider_code        varchar(255)  [not null, note: "denormalized username for broadcast performance"]
  start_lat         decimal(10,7) [not null]
  start_lng         decimal(10,7) [not null]
  current_lat       decimal(10,7) [not null]
  current_lng       decimal(10,7) [not null]
  end_lat           decimal(10,7)
  end_lng           decimal(10,7)
  status            trip_status   [not null, default: "active"]
  started_at        timestamp     [not null]
  ended_at          timestamp
  route_points      text          [note: "GPS waypoints array stored as JSON"]
  total_distance_km decimal(8,3)
  duration_minutes  integer
  created_at        timestamp
  updated_at        timestamp
}

Table hazard_logs {
  id          bigint        [pk, increment]
  haz_code    varchar(255)  [unique, not null]
  type        hazard_type   [not null]
  area        varchar(255)  [not null]
  latitude    decimal(10,7) [not null]
  longitude   decimal(10,7) [not null]
  confidence  decimal(5,2)  [not null, note: "0-100 CV model confidence score"]
  distance    decimal(8,2)  [note: "metres from rider"]
  rider_code  varchar(255)  [not null, note: "denormalized for query performance"]
  user_id     bigint        [ref: > users.id]
  trip_id     bigint        [ref: > trips.id]
  status      hazard_status [not null, default: "active"]
  resolved_by bigint        [ref: > users.id]
  resolved_at timestamp
  detected_at timestamp     [not null]
  created_at  timestamp
  updated_at  timestamp
}

Table emergency_contacts {
  id             bigint       [pk, increment]
  user_id        bigint       [not null, ref: > users.id]
  name           varchar(255) [not null]
  relationship   varchar(255)
  contact_number varchar(255) [not null]
  created_at     timestamp
  updated_at     timestamp
}

Table emergency_alerts {
  id           bigint        [pk, increment]
  user_id      bigint        [not null, ref: > users.id]
  rider_code   varchar(255)  [not null]
  latitude     decimal(10,7) [not null]
  longitude    decimal(10,7) [not null]
  triggered_at timestamp     [not null]
  status       alert_status  [not null, default: "pending"]
  resolved_at  timestamp
  created_at   timestamp
  updated_at   timestamp
}

Table password_reset_otps {
  id         bigint       [pk, increment]
  user_id    bigint       [ref: > users.id]
  email      varchar(255) [not null, note: "lookup key"]
  otp        varchar(255) [not null, note: "bcrypt-hashed 6-digit code"]
  expires_at timestamp    [not null, note: "10-minute window"]
  created_at timestamp
  updated_at timestamp
}

Table system_settings {
  id                     bigint       [pk, increment]
  confidence_threshold   integer      [not null, default: 0]
  items_per_page         integer      [not null, default: 15]
  default_sort           varchar(255) [not null, default: "detected_at"]
  emergency_hazard_types text         [note: "array of hazard type strings stored as JSON"]
  created_at             timestamp
  updated_at             timestamp

  Note: "Singleton table - always one row"
}

Table personal_access_tokens {
  id             bigint       [pk, increment]
  tokenable_type varchar(255) [not null]
  tokenable_id   bigint       [not null, ref: > users.id]
  name           text         [not null]
  token          varchar(64)  [unique, not null]
  abilities      text
  last_used_at   timestamp
  expires_at     timestamp
  created_at     timestamp
  updated_at     timestamp

  Note: "Managed by Laravel Sanctum - polymorphic, no FK on tokenable_id"
}
